--- a/src/html/index.html
+++ b/src/html/index.html
@@ -43,7 +43,12 @@
 
         <div class="updates">
             <h2>Останні оновлення</h2>
-            <p>Додано нові можливості для зручнішого управління завданнями!</p>
+            <table>
+                <tr>
+                    <td>26.03.2025</td>
+                    <td>Додано нові можливості для зручнішого управління завданнями!</td>
+                </tr>
+            </table>
         </div>
     </main>
 </body>
